--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </a></div> <!----></nav>  <!----> </aside> <main aria-labelledby="main-title" class="home"><header class="hero"><img src="/logo.png" alt="hero"> <h1 id="main-title">
       Gang Huang
     </h1> <p class="description">
-      Welcome to my homepage!
+      Hello, welcome to my homepage!
     </p> <p class="action"><a href="/news/" class="nav-link action-button">
   News →
 </a></p></header> <!----> <div class="theme-default-content custom content__default"></div> <div class="footer">
